--- a/class 4/subject.html
+++ b/class 4/subject.html
@@ -54,12 +54,18 @@
 <h3>Q3. Draw a diagram representing the flow of data between CPU and Memory devices.</h3>
     
     </div>
-
-
-
 </div>
 
+<div class="flex-container1">
+    <div class="sub"><h2>Hindi</h2>
+    
+<h3>1) पूर्व पठित पाठ 1 से 4 तक दिए गए अभ्यास से शब्द-अर्थ और प्रश्नोत्तर याद करें।</h3>
+<h3>2) पाठ 1 और 4 ( कविता कंठस्थ करें।)</h3>
+<h3>3) रक्षा – बंधन ( निबंध याद करें।)</h3>    
+<h3>4) लिखो और सीखो – ( पृष्ठ संख्या – 5 से 25 तक लिखें।)</h3>
 
+    </div>
+</div>
 
 
 
