--- a/class 4/project.html
+++ b/class 4/project.html
@@ -61,10 +61,15 @@
         <h3>Note:- Prepare the front page and collect the materials.We will do the project work in the class after summer holidays.</h3>
     </div>
 
-
-
 </div>
 
+    <div class="flex-container1">
+    <div class="sub"><h2>Hindi</h2>
+            
+    <h3>● स्वामी विवेकानंद का सचित्र वर्णन करें। (आठ वाक्यों में)</h3>
+   
+   </div>
+</div>
 
 
 
