--- a/class 5/subject.html
+++ b/class 5/subject.html
@@ -64,7 +64,13 @@
         <h3>2) एक बूँद कविता कंठस्थ करें । </h3>  
         <h3>3) निबंध-भूकंप (व्याकरण विवेक से देखकर) अपनी हिन्दी कॉपी में बारह पंक्तियाँ लिखना और याद करना । </h3>  
     </div>
-
+ <div class="sub"><h2>Sanskrit</h2>
+             
+        <h3>1) पूर्व पठित पाठ 1 से 4 तक दिए गए अभ्यास से प्रश्नोत्तर याद करें।  </h3>  
+        <h3>2) पृष्ठ संख्या 13,14 में दिए गए पुलिंग ,स्त्रीलिंग और नपुंसकलिंग शब्दों के अर्थ याद करें। </h3>  
+        <h3>3) पृष्ठ संख्या – 18 में दिए गए अभ्यास कार्य संस्कृत  की कॉपी में लिखकर याद करें। </h3>  
+    </div>
+</div>
 
 
 
